--- a/spring-boot-knife4j-demo/pom.xml
+++ b/spring-boot-knife4j-demo/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>spring-boot-mybatis-demo</artifactId>
+    <groupId>org.bluefrog</groupId>
+    <artifactId>spring-boot-knife4j-demo</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -22,23 +22,11 @@
             <artifactId>spring-boot-starter-web-services</artifactId>
             <version>2.7.10</version>
         </dependency>
-        <!-- jdbc -->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
-        </dependency>
 
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.1</version>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+            <version>4.1.0</version>
         </dependency>
 
         <!-- 辅助开发包 避免 setter / getter 这种 无效代码 -->
@@ -48,7 +36,6 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
     <!-- 使用 aliyun 仓库加载 -->
